--- a/react-web/package.json
+++ b/react-web/package.json
@@ -13,9 +13,11 @@
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
+    "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "typescript": "~4.1.5"
   },
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.2"
   }
 }
