--- a/react-web/package.json
+++ b/react-web/package.json
@@ -14,6 +14,7 @@
     "@types/react-redux": "^7.1.20",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
