--- a/react-web/package.json
+++ b/react-web/package.json
@@ -21,7 +21,8 @@
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
